1.0 "Asieoniezi"

0.123
 404309 build errors in 0.122 (Geoff)
 404183 pan sends (null) if server requires authentication (Laurent Bigonville)
 395318 give user feedback when filtering a large newsgroup (Kreao Kunjas)
 404347 indicate offline status more clearly (Samuli Karkkainen)

0.122 "Not Even Wrong"
 354779 pan no longer attempts to reconnect (Jason Auvenshine)
 403513 crash in FC6 when viewing one specific message (Yannick Palanque)
 401012 freed memory read in socket-impl-gio (Charles)
 402121 rare memory corruption when parsing dates in scorefile (Charles)
 403066 getting new groups, conditional jump on uninitialised value (Charles)
 401087 servers.xml's file permissions are too lax (Robert Marshall)
 399776 group pane not syncronized when group changes (Bruce Bowler)
 307028 editor error: cursor positioning on indented lines (Richard Rasker)
 401449 sort-by-author doesn't work properly (Charles Hill, Jason Mack)
 400814 unable to mark some groups as read (Christophe)
 402704 queue size too small in task-pane.cc (Shana)
 403762 pasted text isn't wrapped automatically (Artur Jachacy)
 389817 article not shown if another DL in progress (Samuli Karkkainen)
 403076 focus is incorrect when returning to header pane (Walt)
 402743 add keyboard shortcuts in task window (Ulrich Binder)
 402200 support large article cache sizes (Craig Ruff)
 400800 use libsexy for the toolbar's icon entry fields (Charles)
 399616 log message error in 0.121 (Charles)
 400012 nntp 501 error messages could be more helpful (Pavel)
 400256 spurious error message after deleting server (Pavel)
 400329 spurious error opening newsrc file when adding new servers (Pavel)
 400026 spurious error messages when decoding articles w/o attachments (Pavel)
 358062 spurious error message on nntp 411 response (Pavel)
 361603 translatability problems for message strings (Flammie Pirinen)
 400670 fold together some of the redundant translation strings (Charles)

0.121 "Dortmunder"