@@ -5,6 +5,7 @@
  404183 pan sends (null) if server requires authentication (Laurent Bigonville)
  395318 give user feedback when filtering a large newsgroup (Kreao Kunjas)
  404347 indicate offline status more clearly (Samuli Karkkainen)
+ 371838 header pane not updated when a score matches on bytes or lines (Mike)
 
 0.122 "Not Even Wrong"
  354779 pan no longer attempts to reconnect (Jason Auvenshine)
